--- a/FourSeasonCard/WebContent/css/main.css
+++ b/FourSeasonCard/WebContent/css/main.css
@@ -1,44 +1,70 @@
 body {
-  margin:0;
-  display:block;
+	margin: 0;
+	display: block;
 }
+
 h1, p { 
-  display: none; 
-  margin:15px;
-  color: #fff;
-  mix-blend-mode: difference;
+	display: none; 
+	margin:15px;
+	color: #fff;
+	mix-blend-mode: difference;
 }
+
 p {
-  line-height:1.5em;
-  text-align: justify;
+	line-height: 1.5em;
+	text-align: justify;
 }
+
 .container {
-  padding:15px;
-  min-height:100vh;
+	padding: 15px;
+	min-height: 100vh;
 }
+
 section {
-  max-width: 800px;
-  margin: 0 auto;
+	max-width: 800px;
+	margin: 0 auto;
 }
+
 #back-top {
-  position: fixed; 
-  display:none; 
-  font-size: 50px;
-  bottom: 20px; 
-  right:20px; 
-  width:auto;
-  height:51px;
+	position: fixed; 
+	display: none; 
+	font-size: 50px;
+	bottom: 20px; 
+	right: 20px; 
+	width: auto;
+	height: 51px;
 }
+
 a#back-top:active {
-  background:none;
+	background:none;
 }
+
 a#back-top {
-  display: block; 
-  text-decoration: none;
+	display: block; 
+	text-decoration: none;
 }
+
 .topup {
-  bottom:5px;
+	bottom:5px;
 }
+
 #back-top i {
-  display: block;
+	display: block;
 }
+
+#winter {
+	background-color: black;
+}
+
+#spring {
+	background-color: white;
+}
+
+#summer {
+	background-color: skyblue;
+}
+
+#autumn {
+	background-color: orange;
+}
+
